--- a/styles.css
+++ b/styles.css
@@ -759,6 +759,7 @@ main header button:hover {
   align-items: center;
   justify-content: center;
   gap: 2rem; /* gap-8 */
+  border-bottom: 1px solid #2d3748; /* Bordo superiore leggero */
 }
 @media (min-width: 768px) {
   .footer-content {
@@ -789,20 +790,23 @@ main header button:hover {
 
 .footer-links-group {
   width: 50%;
+
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 1.3rem; /* gap-3 */
   margin-bottom: 1rem; /* mb-4 */
 
   text-align: center;
+
+  height: 10rem;
+  margin-right: 15rem;
 }
 .footer-links-group h4 {
   font-size: 1rem; /* text-base */
   font-weight: 600; /* font-semibold */
   color: #fff; /* text-white */
-  margin-bottom: 0.75rem; /* mb-3 */
 }
 .footer-links-group a {
   color: #9ca3af; /* text-gray-400 */
