--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,29 @@ body {
   color: white;
   transition: 1s;
 }
+#video-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0c1216;
+  z-index: 9999;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#intro-video {
+  width: 50%;
+  height: 50%;
+  object-fit: contain;
+  margin: 0 auto;
+  border: 1px solid #388bfd;
+  padding: 2rem;
+  border-radius: 2rem;
+}
 
 nav {
   border: 0.1rem solid rgba(255, 255, 255, 0.3);
